# arxiv-paper-collector

./: .dockerignore  .gitignore  README.md  cloudbuild.yaml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  example_usage.py  gcp-env-template.txt  pyproject.toml  requirements.txt  setup.sh
backend/config/: settings.py  urls.py
backend/papers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/papers/migrations/: 0001_initial.py
backend/visualization/: urls.py  views.py
docker/: Dockerfile  README.md  env.development  env.production  init-db.sql  nginx.conf  nginx.prod.conf  start-production.sh
docker/scripts/: manage-db.sh  start-dev.sh
scripts/: main.py  quick_start.py
shared/collectors/: __init__.py  arxiv_collector.py  base_collector.py  pubmed_collector.py  semantic_scholar_collector.py
shared/models/: paper.py
