[tool.poetry]
name = "arxiv-paper-collector"
version = "0.1.0"
description = "A comprehensive tool for systematically collecting and analyzing academic papers to understand research networks, collaborations, and institutional relationships."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
arxiv = "^1.4.8"
biopython = "^1.81"
requests = "^2.31.0"
semanticscholar = "^0.3.2"
pandas = "^2.2.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
nltk = "^3.8.1"
textblob = "^0.17.1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
ratelimit = "^2.2.1"
aiohttp = "^3.9.1"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"

# Web Framework & Database
django = "^4.2.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.0"
psycopg2-binary = "^2.9.7"
dj-database-url = "^2.1.0"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"

# Cloud & Deployment  
google-cloud-storage = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 